src/test/ui/parser/issue-35813-postfix-after-cast.stderr
error: casts cannot be followed by indexing
  --> $DIR/issue-35813-postfix-after-cast.rs:10:5
   |
LL |     vec![1, 2, 3] as Vec<i32>[0];
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     (vec![1, 2, 3] as Vec<i32>)[0];
   |     ^                         ^

error: casts cannot be followed by indexing
  --> $DIR/issue-35813-postfix-after-cast.rs:12:5
   |
LL |     vec![1, 2, 3]: Vec<i32>[0];
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     (vec![1, 2, 3]: Vec<i32>)[0];
   |     ^                       ^

error: casts cannot be followed by indexing
  --> $DIR/issue-35813-postfix-after-cast.rs:18:5
   |
LL |     (&[0]) as &[i32][0];
   |     ^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     ((&[0]) as &[i32])[0];
   |     ^                ^

error: casts cannot be followed by indexing
  --> $DIR/issue-35813-postfix-after-cast.rs:20:5
   |
LL |     (&[0i32]): &[i32; 1][0];
   |     ^^^^^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     ((&[0i32]): &[i32; 1])[0];
   |     ^                    ^

error: casts cannot be followed by a method call
  --> $DIR/issue-35813-postfix-after-cast.rs:43:13
   |
LL |     let _ = 0i32: i32: i32.count_ones();
   |             ^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     let _ = (0i32: i32: i32).count_ones();
   |             ^              ^

error: casts cannot be followed by a method call
  --> $DIR/issue-35813-postfix-after-cast.rs:45:13
   |
LL |     let _ = 0 as i32: i32.count_ones();
   |             ^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     let _ = (0 as i32: i32).count_ones();
   |             ^             ^

error: casts cannot be followed by a method call
  --> $DIR/issue-35813-postfix-after-cast.rs:47:13
   |
LL |     let _ = 0i32: i32 as i32.count_ones();
   |             ^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     let _ = (0i32: i32 as i32).count_ones();
   |             ^                ^

error: casts cannot be followed by a method call
  --> $DIR/issue-35813-postfix-after-cast.rs:49:13
   |
LL |     let _ = 0 as i32 as i32.count_ones();
   |             ^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     let _ = (0 as i32 as i32).count_ones();
   |             ^               ^

error: casts cannot be followed by a method call
  --> $DIR/issue-35813-postfix-after-cast.rs:51:13
   |
LL |     let _ = 0i32: i32: i32 as u32 as i32.count_ones();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     let _ = (0i32: i32: i32 as u32 as i32).count_ones();
   |             ^                            ^

error: casts cannot be followed by a method call
  --> $DIR/issue-35813-postfix-after-cast.rs:53:13
   |
LL |     let _ = 0i32: i32.count_ones(): u32;
   |             ^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     let _ = (0i32: i32).count_ones(): u32;
   |             ^         ^

error: casts cannot be followed by a method call
  --> $DIR/issue-35813-postfix-after-cast.rs:55:13
   |
LL |     let _ = 0 as i32.count_ones(): u32;
   |             ^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     let _ = (0 as i32).count_ones(): u32;
   |             ^        ^

error: casts cannot be followed by a method call
  --> $DIR/issue-35813-postfix-after-cast.rs:57:13
   |
LL |     let _ = 0i32: i32.count_ones() as u32;
   |             ^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     let _ = (0i32: i32).count_ones() as u32;
   |             ^         ^

error: casts cannot be followed by a method call
  --> $DIR/issue-35813-postfix-after-cast.rs:59:13
   |
LL |     let _ = 0 as i32.count_ones() as u32;
   |             ^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     let _ = (0 as i32).count_ones() as u32;
   |             ^        ^

error: casts cannot be followed by a method call
  --> $DIR/issue-35813-postfix-after-cast.rs:61:13
   |
LL |     let _ = 0i32: i32: i32.count_ones() as u32 as i32;
   |             ^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     let _ = (0i32: i32: i32).count_ones() as u32 as i32;
   |             ^              ^

error: casts cannot be followed by a method call
  --> $DIR/issue-35813-postfix-after-cast.rs:66:13
   |
LL |       let _ = 0
   |  _____________^
LL | |         as i32
   | |______________^
   |
help: try surrounding the expression in parentheses
   |
LL |     let _ = (0
LL |         as i32)
   |

error: casts cannot be followed by indexing
  --> $DIR/issue-35813-postfix-after-cast.rs:74:18
   |
LL |     let x: i32 = &vec![1, 2, 3] as &Vec<i32>[0];
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     let x: i32 = (&vec![1, 2, 3] as &Vec<i32>)[0];
   |                  ^                           ^

error: casts cannot be followed by a method call
  --> $DIR/issue-35813-postfix-after-cast.rs:79:5
   |
LL |     0 as i32.max(0);
   |     ^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     (0 as i32).max(0);
   |     ^        ^

error: casts cannot be followed by a method call
  --> $DIR/issue-35813-postfix-after-cast.rs:81:5
   |
LL |     0: i32.max(0);
   |     ^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     (0: i32).max(0);
   |     ^      ^

error: casts cannot be followed by a method call
  --> $DIR/issue-35813-postfix-after-cast.rs:97:8
   |
LL |     if 5u64 as i32.max(0) == 0 {
   |        ^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     if (5u64 as i32).max(0) == 0 {
   |        ^           ^

error: casts cannot be followed by a method call
  --> $DIR/issue-35813-postfix-after-cast.rs:100:8
   |
LL |     if 5u64: u64.max(0) == 0 {
   |        ^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     if (5u64: u64).max(0) == 0 {
   |        ^         ^

error: casts cannot be followed by a method call
  --> $DIR/issue-35813-postfix-after-cast.rs:108:9
   |
LL |         5u64 as u32.max(0) == 0
   |         ^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |         (5u64 as u32).max(0) == 0
   |         ^           ^

error: casts cannot be followed by a method call
  --> $DIR/issue-35813-postfix-after-cast.rs:112:9
   |
LL |         5u64: u64.max(0) == 0
   |         ^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |         (5u64: u64).max(0) == 0
   |         ^         ^

error: casts cannot be followed by indexing
  --> $DIR/issue-35813-postfix-after-cast.rs:118:24
   |
LL | static bar: &[i32] = &(&[1,2,3] as &[i32][0..1]);
   |                        ^^^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL | static bar: &[i32] = &((&[1,2,3] as &[i32])[0..1]);
   |                        ^                  ^

error: casts cannot be followed by indexing
  --> $DIR/issue-35813-postfix-after-cast.rs:121:25
   |
LL | static bar2: &[i32] = &(&[1i32,2,3]: &[i32; 3][0..1]);
   |                         ^^^^^^^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL | static bar2: &[i32] = &((&[1i32,2,3]: &[i32; 3])[0..1]);
   |                         ^                      ^

error: casts cannot be followed by ?
  --> $DIR/issue-35813-postfix-after-cast.rs:127:5
   |
LL |     Err(0u64) as Result<u64,u64>?;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     (Err(0u64) as Result<u64,u64>)?;
   |     ^                            ^

error: casts cannot be followed by ?
  --> $DIR/issue-35813-postfix-after-cast.rs:129:5
   |
LL |     Err(0u64): Result<u64,u64>?;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     (Err(0u64): Result<u64,u64>)?;
   |     ^                          ^

error: casts cannot be followed by a function call
  --> $DIR/issue-35813-postfix-after-cast.rs:154:5
   |
LL |     drop as fn(u8)(0);
   |     ^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     (drop as fn(u8))(0);
   |     ^              ^

error: casts cannot be followed by a function call
  --> $DIR/issue-35813-postfix-after-cast.rs:156:5
   |
LL |     drop_ptr: fn(u8)(0);
   |     ^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     (drop_ptr: fn(u8))(0);
   |     ^                ^

error: casts cannot be followed by `.await`
  --> $DIR/issue-35813-postfix-after-cast.rs:161:5
   |
LL |     Box::pin(noop()) as Pin<Box<dyn Future<Output = ()>>>.await;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     (Box::pin(noop()) as Pin<Box<dyn Future<Output = ()>>>).await;
   |     ^                                                     ^

error: casts cannot be followed by `.await`
  --> $DIR/issue-35813-postfix-after-cast.rs:164:5
   |
LL |     Box::pin(noop()): Pin<Box<_>>.await;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     (Box::pin(noop()): Pin<Box<_>>).await;
   |     ^                             ^

error: casts cannot be followed by a field access
  --> $DIR/issue-35813-postfix-after-cast.rs:176:5
   |
LL |     Foo::default() as Foo.bar;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     (Foo::default() as Foo).bar;
   |     ^                     ^

error: casts cannot be followed by a field access
  --> $DIR/issue-35813-postfix-after-cast.rs:178:5
   |
LL |     Foo::default(): Foo.bar;
   |     ^^^^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |     (Foo::default(): Foo).bar;
   |     ^                   ^

error: casts cannot be followed by a method call
  --> $DIR/issue-35813-postfix-after-cast.rs:88:9
   |
LL |         if true { 33 } else { 44 } as i32.max(0),
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |         (if true { 33 } else { 44 } as i32).max(0),
   |         ^                                 ^

error: casts cannot be followed by a method call
  --> $DIR/issue-35813-postfix-after-cast.rs:90:9
   |
LL |         if true { 33 } else { 44 }: i32.max(0)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
LL |         (if true { 33 } else { 44 }: i32).max(0)
   |         ^                               ^

error[E0214]: parenthesized type parameters may only be used with a `Fn` trait
  --> $DIR/issue-35813-postfix-after-cast.rs:140:13
   |
LL |     drop as F();
   |             ^^^ only `Fn` traits may use parentheses

error[E0214]: parenthesized type parameters may only be used with a `Fn` trait
  --> $DIR/issue-35813-postfix-after-cast.rs:142:15
   |
LL |     drop_ptr: F();
   |               ^^^ only `Fn` traits may use parentheses

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/issue-35813-postfix-after-cast.rs:121:25
   |
LL | static bar2: &[i32] = &(&[1i32,2,3]: &[i32; 3][0..1]);
   |                         ^^^^^^^^^^^^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/issue-35813-postfix-after-cast.rs:12:5
   |
LL |     vec![1, 2, 3]: Vec<i32>[0];
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/issue-35813-postfix-after-cast.rs:20:5
   |
LL |     (&[0i32]): &[i32; 1][0];
   |     ^^^^^^^^^^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/issue-35813-postfix-after-cast.rs:29:8
   |
LL |     if 5u64: u64: u64 == 0u64 {
   |        ^^^^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/issue-35813-postfix-after-cast.rs:33:13
   |
LL |     let _ = 5u64: u64: u64 as u8 as i8 == 9i8;
   |             ^^^^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/issue-35813-postfix-after-cast.rs:90:9
   |
LL |         if true { 33 } else { 44 }: i32.max(0)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/issue-35813-postfix-after-cast.rs:100:8
   |
LL |     if 5u64: u64.max(0) == 0 {
   |        ^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/issue-35813-postfix-after-cast.rs:112:9
   |
LL |         5u64: u64.max(0) == 0
   |         ^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/issue-35813-postfix-after-cast.rs:129:5
   |
LL |     Err(0u64): Result<u64,u64>?;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 45 previous errors

For more information about this error, try `rustc --explain E0214`.
